2008-02-20  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/mode_data/flowtablewithfields.cc:
	Use set_layout_item() on all layout element to allow to
	adding them at the correct place to a layout_group
	
	* glom/utility_widgets/flowtable.cc:
	Remove some debug messages

2008-02-20  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/utility_widgets/flowtable.cc:
	Allow dragging at below the last item of a group

2008-02-19  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/flowtablewithfields.h:
	* glom/utility_widgets/flowtable.h:
	Added drag and drop for notebooks

2008-02-19  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/frame_glom.cc:
	Fixed crasher when using Tables menu
	
	* glom/glom.glade:
	Removed unused dialog

2008-02-19  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/flowtablewithfields.h:
	Cleaned up dnd code in FlowTableWithFields

2008-02-19  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/application.cc:
	* glom/application.h:
	* glom/frame_glom.cc:
	* glom/frame_glom.h:
	Show drag toolbar when in developer mode
	
	* glom/mode_data/box_data_details.cc:
	Recreate layout when switching to developer mode

2008-02-18  Johannes Schmid <johannes.schmid@openismus.com>

	* glom/libglom/connectionpool.cc:	
	#ifdef'd all those annoying avahi debug messages

	* glom/libglom/data_structure/layout/layoutgroup.cc:
	* glom/libglom/data_structure/layout/layoutgroup.h:	
	Added LayoutGroup::remove_item()  

	* glom/libglom/document/document_glom.cc:	
	* glom/mode_data/dialog_layout_details.cc:
	Remove default layout creation as it's no longer needed when you can  
	create your layout using drag and drop.

	* glom/mode_data/flowtablewithfields.cc:
	* glom/mode_data/flowtablewithfields.h:	
	* glom/mode_data/box_data_details.cc:  
	* glom/mode_data/box_data_details.h:  
	Fixed dragging of groups (mostly)
